# thiefcatcher

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  LICENSE  README.md
.github/workflows/: codeql.yml
CMakeModules/: FindTinyXML2.cmake
Core/: .gitignore  CMakeLists.txt  CREDITS.txt  Credits.txt  README.txt  Readme.txt  conanfile.txt  config.ini
Core/data/: countries.xml  criminals.xml  default-game.db
Core/dev/: create_db.bat  create_db.sh  data.sql  struct.sql
Core/dev/resources/: bullet.xcf  magn_glass.xcf  map_bg.xcf  notebook_background.xcf
Core/dev/resources/images/: hall_of_fame_background.xcf
Core/resources/images/: cursor.xpm
Core/resources/languages/: en_US.properties  es_ES.properties
Core/resources/languages/ca/LC_MESSAGES/: messages.mo  messages.po
Core/resources/languages/es/LC_MESSAGES/: messages.mo  messages.po
Core/resources/music/: music.mid
Core/src/: Constants.h  Main.cpp  Vars.cpp  Vars.h  Version.hpp  Version.hpp.in
Core/src/entities/: Clue.cpp  Clue.h  ClueFactory.cpp  ClueFactory.h  ClueManager.cpp  ClueManager.h  CountriesManager.cpp  CountriesManager.h  Country.cpp  Country.h  Criminal.cpp  Criminal.h  CriminalsManager.cpp  CriminalsManager.h  Genre.h  GeoCoordinates.h  Place.cpp  Place.h  PlacesManager.cpp  PlacesManager.h  Player.cpp  Player.h  PlayerCase.cpp  PlayerCase.h  PlayerCaseManager.cpp  PlayerCaseManager.h  PlayersManager.cpp  PlayersManager.h
Core/src/entities/format/: CountryDescriptionGenerator.cpp  CountryDescriptionGenerator.h  CriminalFormatter.cpp  CriminalFormatter.h  GenreFormatter.cpp  GenreFormatter.h
Core/src/screens/: AssignmentScreen.cpp  AssignmentScreen.h  ComputerScreen.cpp  ComputerScreen.h  CountryDrawing.cpp  CountryDrawing.h  DossierScreen.cpp  DossierScreen.h  Game.cpp  Game.h  GameOverScreen.cpp  GameOverScreen.h  HallOfFameScreen.cpp  HallOfFameScreen.h  HelpScreen.cpp  HelpScreen.h  IntroScreen.cpp  IntroScreen.h  Map.cpp  Map.h  MenuScreen.cpp  MenuScreen.h  OptionsScreen.cpp  OptionsScreen.h  PlaceSelector.cpp  PlaceSelector.h  ProfileScreen.cpp  ProfileScreen.h
Core/src/screens/handlers/: GameEventHandler.cpp  GameEventHandler.h
Core/src/ui/: Clock.cpp  Clock.h  Transitions.cpp  Transitions.h
Core/src/ui/widgets/: InputBox.cpp  InputBox.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  SquareButton.cpp  SquareButton.h
Core/src/utilities/: Configurator.cpp  Configurator.h  DateTime.cpp  DateTime.h  RandomGen.h  Translator.cpp  Translator.h  Updater.cpp  Updater.h
Core/src/utilities/fx/: DynamicSprite.cpp  DynamicSprite.h  FireworksPS.cpp  FireworksPS.h  ISprite.h  ImageOffsetSprite.cpp  ImageOffsetSprite.h  MultiImagesSprite.cpp  MultiImagesSprite.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  Rocket.cpp  Rocket.h  Sparkle.cpp  Sparkle.h  Sprite.cpp  Sprite.h  Sprites.h  Star.cpp  Star.h
Core/src_env/local/entities/: PlayersManager.cpp
Core/src_env/web/entities/: PlayersManager.cpp
Kangaroo/: .gitignore  CMakeLists.txt
Kangaroo/include/: Area.h  Color.h  CoreService.h  Database.h  DialogFactory.h  Dimension.h  EventHandler.h  FileUtils.h  Font.h  FontManager.h  FontService.h  FrameRegulator.h  GameObject.h  HttpClient.h  MathUtil.h  MediaManager.h  MediaMusic.h  MediaSound.h  MixerService.h  MouseCursor.h  Point.h  Properties.h  Random.h  Renderer.h  ResultSet.h  Scene.h  SensitiveAreas.h  Service.h  Services.h  StringUtil.h  Surface.h  SurfaceUtil.h  Text.h  TextUtils.h  Texture.h  Window.h
Kangaroo/include/components/: AbstractDialog.h  ConfirmationDialog.h  InformationDialog.h
Kangaroo/src/: Area.cpp  Color.cpp  CoreService.cpp  Database.cpp  DialogFactory.cpp  Dimension.cpp  EventHandler.cpp  FileUtlis.cpp  Font.cpp  FontManager.cpp  FontService.cpp  FrameRegulator.cpp  HttpClient.cpp  MathUtil.cpp  MediaManager.cpp  MediaMusic.cpp  MediaSound.cpp  MixerService.cpp  MouseCursor.cpp  Point.cpp  Properties.cpp  Random.cpp  Renderer.cpp  ResultSet.cpp  Scene.cpp  SensitiveAreas.cpp  Services.cpp  StringUtil.cpp  Surface.cpp  SurfaceUtil.cpp  Text.cpp  TextUtils.cpp  Texture.cpp  Window.cpp
Kangaroo/src/components/: ConfirmationDialog.cpp  InformationDialog.cpp
